tpl/css/styles.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0b1 | 201101
   NOTE: WORK IN PROGRESS
   USE WITH CAUTION AND TEST WITH ABANDON */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}

body {
    font-family: Arial;
    line-height: 1;
}

ol, ul {
    list-style: none;
}

blockquote, q {
    quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}

/* remember to define visible focus styles!
:focus {
	outline: ?????;
} */

/* remember to highlight inserts somehow! */
ins {
    text-decoration: none;
}

del {
    text-decoration: line-through;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

/*============================*/

h1, h2, h3, h4, h5, h6 {
    font-family: Arial;
}

h1 {
    font-size: 32px;
}

h2 {
    font-size: 28px;
}

h3 {
    font-size: 26px;
}

h4 {
    font-size: 24px;
}

h5 {
    font-size: 22px;
}

h6 {
    font-size: 18px;
}

* {
    padding: 0;
    margin: 0;
}

.main-div {
    width: 1000px;
    margin: 0 auto;
}
    .header {
        padding: 10px 0 4px 20px;
        margin-bottom: 20px;
        border-bottom: 1px solid #bababa;
        overflow: hidden;
    }
        .logo {
            width: 30%;
        }
        .right-menu {
            /*float: right;*/
            display: inline-block;
            vertical-align: bottom;
            width: 69.5%;
            text-align: right;
        }
            .search-div {
                display: /*inline-*/block;
                text-align: right;
                margin-top: 10px;
                height: 24px;
            }
                #search-form {
                    display: inline-block;
                    padding: 0 0 0 0;
                }
                #search-box {
                    width: 200px;
                    padding-left: 5px;
                    padding-right: 5px;
                    font-size: 16px;
                    font-family: Arial;
                    border: 0 none;
                    height: 24px;
                    outline: none;
                    box-sizing: border-box;
                }
                #search-button {
                    border: 0 none;
                    background: url(../images/search_button.svg) center no-repeat;
                    width: 18px;
                    height: 18px;
                    margin-left: 3px;
                    cursor: pointer;
                    padding: 0;
                    float: right;
                }
                :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
                    text-align: right;
                }
                ::-moz-placeholder { /* Mozilla Firefox 19+ */
                    text-align: right;
                }
                :-ms-input-placeholder { /* Internet Explorer 10+ */
                    text-align: right;
                }
                ::-webkit-input-placeholder { /* WebKit browsers */
                    text-align: right;
                }
                #search-box:focus {
                    border: 1px solid #4067c1;
                }
                #search-box:focus:-moz-placeholder {
                    color: transparent;
                }
                #search-box:focus::-moz-placeholder {
                    color: transparent;
                }
                #search-box:focus:-ms-input-placeholder {
                    color: transparent;
                }
                #search-box:focus::-webkit-input-placeholder {
                    color: transparent;
                }
            .menu-div {
                margin-top: 5px;
                /*text-align: right;
                display: inline-block;
                position: relative;*/
            }
                .main-menu, .fb-logo {
                                    display: inline-block;
                }
                .main-menu {
                                    list-style-type: none;
                                    padding: 0;
                }
                    .main-menu > li {
                                        display: inline-block;vertical-align: middle;
                    }
                        .main-menu > li > a {
                                            margin-bottom: 0;
                                            display: inline-block;
                                            line-height: 25px;
                                            padding: 10px 10px 10px 10px;
                                            color: #000;
                                            text-decoration: none;
                                            background-color: #ffffff;
                        }
                        .main-menu > li > a:hover {
                                            background-color: rgba(222, 241, 255, 0.73);
                                        }
                        .main-menu > li > a:visited {
                                            color: #000;
                        }
                        .main-menu > li > a.now {
                            color: #FF0066;
                        }
                .fb-logo-div{
                    width: 20px;
                    display: inline-block;
                    vertical-align: middle;
                    text-align: center;
                    line-height: 25px;
                }
                .fb-logo{
                    height: 17px;
                    width:8px;
                }

    .promo {
        text-align: center;
        margin-bottom: 20px;;
    }
    .services{
        text-align: center;
        display: inline-block;
        margin-bottom: 20px;
    }
        .service{
            width: 22%;
            height: inherit;
            display: inline-block;
            float: left;
            text-align: center;
            line-height:1.4;
            background-color: #f5f5f5;
        }
        #service2{
            margin-left: 4%;
            margin-right: 2%;
        }
        #service3{
            margin-left: 2%;
            margin-right: 4%;
        }
            .services  a {
                 color: black;
                 text-decoration: none;
            }
            .service hr {
                width: 88%;
                margin: 0 6% 0 6%;
            }
            .service p {
                padding:  0 10px 10px 10px;
            }
            .service img {
                height: 40px;
                margin: 5px 0 5px 0;
            }
    .news{

    }
        .news-top {
            text-align: center;
        }
            .news-hr {
                display: inline-block;
                vertical-align: middle;
                width: 39.78%;
                border: 0;
                height: 4px;
                background-color: black;
            }
            .news-title {
                display: inline-block;
                vertical-align: middle;
                margin: 0 10px ;
                font-size: 41px;
            }
        .news-content {
            height:300px;
            overflow: hidden;
            background-color: #ededed;
            margin-bottom: 20px;
        }
    .footer {
        overflow: hidden;
        height: 80px;
        background-color: #ededed;
    }
        .copyr {
            vertical-align: middle;
        }
        .footer-link {
            display: inline-block;
            text-align: center;
            vertical-align: middle;
            position: relative;
            top:10%;
            width: 19.6%;
        }
            .footer-link a {
                text-decoration: none;
                color: #000;
            }
                .footer-icon {
                    height: 25px;
                    margin:10px 0;
                }

